refactored damage statuses and added cards